# raytracer

./: .gitignore  CMakeLists.txt  Cargo.toml  main.c
images/: image.ppm
include/: color.h  ray.h  vector.h
src/: color.c  error.rs  lib.rs  main.rs  ray.c  ray.rs  vec.rs  vector.c
src/test/: mod.rs  ray_test.rs  vec_test.rs
